--- a/index.html
+++ b/index.html
@@ -9,58 +9,82 @@
             font-family: 'Courier New', Courier, monospace;
             background-color: #1b1b38;
             color: #ffffff;
-            text-align: center;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         header {
             background: #ff6f61;
             padding: 20px 0;
+            width: 100%;
+            text-align: center;
         }
         header h1 {
             margin: 0;
             font-size: 3em;
         }
         .container {
-            margin: 50px auto;
-            max-width: 800px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            margin: 20px;
             padding: 20px;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
+            width: 90%;
+            max-width: 800px;
         }
-        .container h2 {
+        .text {
+            flex: 1;
+            padding-right: 20px;
+        }
+        .text h2 {
             font-size: 2em;
         }
-        .container p {
+        .text p {
             font-size: 1.2em;
         }
         .rocket {
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            flex: 0;
             font-size: 1.5em;
             white-space: pre;
             animation: moveRocket 5s linear infinite;
+            position: relative;
         }
         @keyframes moveRocket {
-            0% { transform: translate(-50%, 100%); }
-            50% { transform: translate(-50%, -50%); }
-            100% { transform: translate(-50%, -50%); }
-        }
-        .mars {
-            font-size: 3em;
+            0% { transform: translateY(100vh); }
+            50% { transform: translateY(-50vh); }
+            100% { transform: translateY(-50vh); }
         }
         footer {
             background: #ff6f61;
             padding: 10px 0;
-            position: fixed;
             width: 100%;
+            text-align: center;
+            position: fixed;
             bottom: 0;
         }
         footer p {
             margin: 0;
+        }
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 2em;
+            }
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .text {
+                padding-right: 0;
+                text-align: center;
+            }
+            .rocket {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -69,40 +93,10 @@
         <h1>Mars Movers</h1>
     </header>
     <div class="container">
-        <h2>Moving You to a New World!</h2>
-        <p>Welcome to Mars Movers, the premier moving service on the Red Planet! Whether you're relocating your Martian mansion or just need a lift to Olympus Mons, we've got you covered.</p>
-        <div class="rocket">
-            <pre>
-             /\
-            /  \
-           /    \
-          |      |
-          |  M   |
-          |  A   |
-          |  R   |
-          |  S   |
-          |  M   |
-          |  O   |
-          |  V   |
-          |  E   |
-          |  R   |
-          |  S   |
-          |______|
-          /      \
-         /        \
-        /          \
-       |____________|
-            </pre>
-        </div>
-        <p class="mars">🚀🌕</p>
-        <p>Why choose Mars Movers?</p>
-        <ul>
-            <li>Fast and efficient space shuttles.</li>
-            <li>Friendly Martian crew.</li>
-            <li>Zero-gravity moving – your stuff practically floats!</li>
-            <li>Complimentary Mars bars with every move.</li>
-        </ul>
-        <p>Ready to make your move? <a href="mailto:info@marsmovers.com" style="color: #ff6f61;">Contact us</a> today!</p>
-    </div>
-    <footer>
-        <p>&copy; 2024 Mars Movers. All rights
+        <div class="text">
+            <h2>Moving You to a New World!</h2>
+            <p>Welcome to Mars Movers, the premier moving service on the Red Planet! Whether you're relocating your Martian mansion or just need a lift to Olympus Mons, we've got you covered.</p>
+            <p>Why choose Mars Movers?</p>
+            <ul>
+                <li>Fast and efficient space shuttles.</li>
+                <li
