--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
         .text {
             flex: 1;
-            padding-right: 60px; /* Add padding to prevent text overlap with rocket */
+            padding-right: 80px; /* Add more padding to prevent text overlap with rocket */
             text-align: justify;
         }
         .text h2 {
@@ -77,11 +77,12 @@
             }
             .container {
                 flex-direction: column;
-                align-items: center;
+                align-items: flex-start;
             }
             .text {
                 padding-right: 0;
-                text-align: center;
+                padding-bottom: 40px; /* Add padding to the bottom for spacing */
+                text-align: left;
             }
             .text h2 {
                 font-size: 1.5em;
@@ -104,15 +105,15 @@
     <div class="container">
         <div class="text">
             <h2>Moving You to a New World!</h2>
-            <p>Welcome to Mars Movers, the premier moving service on the <BR> Red Planet! Whether you're relocating your Martian mansion or <BR> just need a lift to Olympus Mons, we've got you covered.</p>
+            <p>Welcome to Mars Movers, the premier moving service on the <br> Red Planet! Whether you're relocating your Martian mansion or <br> just need a lift to Olympus Mons, we've got you covered.</p>
             <p>Why choose Mars Movers?</p>
             <ul>
                 <li>Fast and efficient space shuttles.</li>
                 <li>Friendly Martian crew.</li>
-                <li>Zero-gravity moving – your stuff practically floats!</li>
-                <li>Complimentary Mars bars with every move.</li>
+                <li>Zero-gravity moving – your <br> stuff practically floats!</li>
+                <li>Complimentary Mars bars <br>with every move.</li>
             </ul>
-            <p>Ready to make your move? <a href="mailto:info@marsmovers.com" style="color: #ff6f61;">Contact us</a> today!</p>
+            <p>Ready to make your move? <br> <a href="mailto:apnok365@gmail.com" style="color: #ff6f61;">Contact us</a> today!</p>
         </div>
         <div class="rocket">
             <pre>
